--- a/docs/experience/intro.mdx
+++ b/docs/experience/intro.mdx
@@ -1,19 +1,19 @@
 ---
 sidebar_position: 1
-title: Professional Experience
+title: Portfolio
 slug: portfolio
 ---
 
 import ResumeDownloadLinks from "../../src/components/common/DownloadLinks";
 import Image from "@theme/IdealImage";
 
-## Technical Projects
+### AI based Sass
 
-### Revenue Optimizer
+1. Revenue Optimizer
 
 <Image img={require("../../static/img/2025/cro.png")} />
 
-Description: Currently under development, details remain confidential and are not fully [publicly available](https://www.sabre.com/products/sabremosaic/sabremosaic-offer-management/continuous-revenue-optimizer/), akin to the Sabre website.
+Description: Currently under development, details remain confidential and are not fully [publicly available](https://www.sabre.com/products/sabremosaic/sabremosaic-offer-management/continuous-revenue-optimizer/), akin to the Sabre website. The product boasts of first in class gen ai based chat integration to understand or seek insights of the product.
 
 Role Overview:
 
@@ -35,7 +35,7 @@ Duration: April 2024 - Present
 
 ### Enterprise Design Language
 
-1.  Sabre Spark Enterprise Design Language
+2.  Sabre Spark Enterprise Design Language
 
     By using Sabre Spark EDL, Sabre ensures a unified user experience across their products, enhancing user satisfaction and facilitating the adoption of new features and functionality. Spark EDL team consists of skilled designers and design technologists who specialize in developing vanilla JS components, React components, and design language CSS and themes. Their expertise and collaborative approach ensure that Sabre's products are designed with a consistent and intuitive user interface that meets the highest standards of accessibility, efficiency, and visual appeal.
 
@@ -49,7 +49,7 @@ Duration: April 2024 - Present
 
 ### Travel Industry
 
-2. Sabre Sonic Inventory GUI
+3. Sabre Sonic Inventory GUI
 
    Sabre Sonic Inventory GUI is a graphical user interface & spring boot application that allows airlines to efficiently manage their flight schedules, seat inventory, and fare classes pricing. Sabre Sonic Inventory GUI also includes advanced features such as real-time inventory updates, dynamic pricing, and seat maps, which facilitate effective decision-making and improve customer satisfaction. The Sabre Sonic Inventory GUI team is composed of a diverse group of professionals, including business analysts, designers, full stack developers, architects, managers, directors, marketing specialists, and project managers.
 
@@ -59,7 +59,7 @@ Duration: April 2024 - Present
 
 ### Ecommerce
 
-3. Landmark brands mdot webapps
+4. Landmark brands mdot webapps
 
    To enhance the mobile ecommerce website conversions for Landmark Group brands, our frontend engineering team developed a standalone mdot web app using modern technologies such as ReactJS, PWA, and server-side rendering. The project was initiated from scratch, and the team faced various technical challenges to obtain approval from the directors and gain infrastructure assistance. While ensuring a great user experience and scaling the team, we met the project deadlines and successfully launched the app.
 
@@ -67,7 +67,7 @@ Duration: April 2024 - Present
 
    Tech stack - NodeJS, Express, ReactJS, Redux, React Router, Redux thunk, Algolia, REST Api, PWA, Service workers, Vue JS
 
-4. Landmark brands ecommerce webapps
+5. Landmark brands ecommerce webapps
 
    Landmark Group is a conglomerate company that owns several retail brands such as Maxfashion, Lifestyle, Home Center, and more. Each brand has its own website, such as maxfashion.com, which provides customers with a wide range of clothing, footwear, and accessories options for all ages, from casual to formal wear. The website offers a user-friendly interface, enabling easy navigation and browsing of products by category, brand, or price, and provides frequent sales and discounts to customers. The website serves as a digital representation of the retailer's brand identity and provides customers with omnichannel services such as the option to purchase online and pick up in-store.
 
@@ -79,7 +79,7 @@ Tech stack - Bootstrap, jQuery, responsive websites, sketch, mac, SASS, BEM CSS,
 
 [Max Fashion Website](https://www.maxfashion.in/in/en/)
 
-5. Shukran
+6. Shukran
 
    Shukran is a mobile app developed by Dubai's largest retail conglomerate, Landmark Group, to enhance customer experience and engagement. The web app provides users with a seamless shopping experience by allowing them to earn and redeem reward points across various Landmark Group brands, including Centrepoint, Home Centre, and Max Fashion. Shukran also offers personalized deals, exclusive discounts, and early access to sales, increasing customer loyalty and retention. The app features a user-friendly interface, easy payment options, and a comprehensive loyalty program that rewards users for their purchases and engagement. Shukran is available for download on both iOS and Android devices.
 
@@ -91,7 +91,7 @@ Tech stack - Bootstrap, jQuery, responsive websites, sketch, mac, SASS, BEM CSS,
 
 ### Fintech
 
-6. Chrome river
+7. Chrome river
 
    Chrome River is a cloud-based solution for expense and invoice management, targeted towards businesses and organizations of all sizes. The platform allows users to easily submit, track and approve expenses and invoices through a simple and user-friendly interface. The website is responsible for uploading expense receipts, viewing auto-uploaded receipts, approving expenses and much more by reducing administrative burden and improving accuracy. It is built on a modern technology stack, with support for RESTful APIs, webhooks and integrations with popular tools like Salesforce, Slack.
 
@@ -101,7 +101,7 @@ Tech stack - Bootstrap, jQuery, responsive websites, sketch, mac, SASS, BEM CSS,
 
    [Chromeriver login](https://app.chromeriver.com/login)
 
-7. Vista Real estate
+8. Vista Real estate
 
    The web app is designed to connect real estate agents and buyers with financial assistance. It simplifies the process of finding a home loan by bringing together buyers, lenders, and agents in one platform. The app enables buyers to search for properties that meet their budget and loan requirements, while real estate agents can connect with potential buyers and lenders, and track loan progress. The platform offers tools to streamline loan applications and approvals, as well as personalized guidance from financial experts. Overall, the web app offers a convenient and efficient solution for both buyers and agents looking for financial assistance in the real estate industry.
 
@@ -111,7 +111,7 @@ Tech stack - Bootstrap, jQuery, responsive websites, sketch, mac, SASS, BEM CSS,
 
 ### Marketing
 
-8. Cisco Webex Sales Pages
+9. Cisco Webex Sales Pages
 
    The Cisco Webex Sales Portal is a sophisticated and all-encompassing platform built to provide sales teams with comprehensive support for their Webex product and service sales efforts. The portal offers customers multiple options, including the ability to create free tier or trial accounts, as well as purchase premium plans directly from the website. Boasting a highly intuitive user interface and an array of powerful features, the Cisco Webex Sales Portal is a must-have resource for sales professionals seeking to accelerate growth and foster long-term customer relationships.
 
@@ -123,7 +123,7 @@ Tech stack - Bootstrap, jQuery, responsive websites, sketch, mac, SASS, BEM CSS,
 
 ### Education technology
 
-9. Impartus Video Lectures
+10. Impartus Video Lectures
 
    The web app is an online platform that enables students to access recorded lectures. The app provides a convenient way for students to catch up on missed lectures or review course material at their own pace. It features a user-friendly interface that allows students to search for specific lectures, view related materials, and take notes. Overall, the web app provides a valuable resource for students looking to enhance their learning experience and improve their academic performance.
 
@@ -131,11 +131,11 @@ Tech stack - Bootstrap, jQuery, responsive websites, sketch, mac, SASS, BEM CSS,
 
    Tech stack - AngularJS, NodeJS, Gulp JS, Bootstrap, SCSS
 
-### Personal
+### Bookstoc - v1
 
-10. Bookstoc - Unconventional books cataloging app
+11. Bookstoc - Unconventional books cataloging app
 
-Bookstoc is a hobby project which I built to catalog my books collection and to track the books I share with my friends. I was the full stack developer on the doing development and marketing for the website. Built on ExtJS and PHP, it had ran its time. Currently the `Next JS` version of bookstoc is `WIP`.
+Bookstoc was built to catalog personal books collection and to track the books that are share with my friends/members. I was the full stack developer on the doing development and marketing for the website. Built on ExtJS and PHP, it had ran its time. 
 
 {" "}
 
@@ -145,7 +145,9 @@ Tech stack - ExtJS, Php, linux hosting
 
 [bookstoc website WIP](https://bookstoc.com/)
 
-11. dhbalaji website
+### dhbalaji.dev - v2
+
+12. dhbalaji website
 
 The personal website of a dhbalaji, serves as a platform for showcasing his portfolio, sharing certification notes, and blogging about his experiences. The website also emphasizes the importance of personal branding and reaching a wider audience to share knowledge and ideas. Through his website, I try to promote my skills and expertise, while also sharing valuable insights and knowledge with others in the industry. Overall, the website serves as a valuable resource for individuals interested in frontend engineering, as well as those looking to build their personal brand and expand their reach in the industry. The website is few years old and had already evolved from `hexo JS` to `docusarus`.
 
@@ -159,7 +161,7 @@ Tech stack - docusarus, vercel, css, nodeJS, google domains
 
 ### Not For Profits
 
-12. Satpraje
+13. Satpraje
 
 The not-for-profit organization is dedicated to improving the lives of children in the Karnataka area. The organization offers a range of services and programs designed to address the needs of children in the region, such as education, healthcare, and nutrition. It works closely with local communities and government agencies to provide support and resources to children and their families.
 
@@ -171,38 +173,12 @@ Tech Stack: Wordpress
 
 [Satpraje Website](https://satpraje.org/)
 
-13. Mann Cottage Industry Products Catalog
+14. Mann Cottage Industry Products Catalog
 
 The not-for-profit organization is dedicated to promoting handmade bedsheets and blankets from the Rajasthan area by providing them with online visibility. The organization works with local artisans to showcase their products on its website, which provides a platform for the artisans to reach a wider audience. By promoting handmade products, the organization is helping to support the local economy and preserve traditional crafts and techniques. The organization also aims to raise awareness about the cultural significance of these products and their importance in preserving the heritage of the region.
 
 > Photo not available
 
 Tech Stack: Godaddy hosting, HTML, CSS
-
-## Non technical Skills
-
-### Technical speaker
-
-As a speaker with a technical background, I have experience presenting complex concepts to both technical and non-technical audiences in an engaging and understandable manner.
-
-### Public speaker
-
-I have honed my public speaking skills as a member of Toastmasters International, where I regularly deliver speeches on a variety of topics and receive feedback to improve my communication abilities.
-
-### Tech Blogger & Trainer
-
-As a tech blogger and an adept writer, I possess the skills to produce high-quality internal articles that can be leveraged by our team. In addition, I have conducted successful workshops on various technical topics to help team members develop their skills and knowledge.
-
-### Mentoring co-workers & presenting feedback
-
-As a mentor, I take pride in guiding and supporting my colleagues to enhance their skills and reach their potential. I offer constructive feedback to help them improve and achieve their goals. Additionally, I believe in creating a positive and encouraging environment to foster growth and development.
-
-### Interviewing frontend engineers
-
-I have experience interviewing frontend engineers through telephonic screening, assessing their previous job roles, evaluating their coding proficiency, identifying their strengths, and determining their fit for our organization.
-
-### Organize technical events
-
-I have experience organizing technical events, such as office hours, that benefit cross-functional teams and foster collaboration within an organization.
 
 > <ResumeDownloadLinks isInLine={false} />
