--- a/docs/experience/side-projects.mdx
+++ b/docs/experience/side-projects.mdx
@@ -1,7 +1,7 @@
 ---
 sidebar_position: 2
-title: Other Experience
-slug: portfolio/personal
+title: Side Projects
+slug: portfolio/side-projects
 ---
 
 # Other Work Experience
