docs: enhance portfolio introduction with detailed AI enablement and platform leadership sections

--- a/docs/experience/intro.mdx
+++ b/docs/experience/intro.mdx
@@ -7,6 +7,44 @@ slug: portfolio
 import ResumeDownloadLinks from "../../src/components/common/DownloadLinks";
 import Image from "@theme/IdealImage";
 
+> TLDR: I lead frontend architecture and engineering across multiple AI-driven product teams, with a primary focus on building scalable, production-grade React applications and enabling AI-assisted development workflows. My role combines hands-on engineering, system design, and AI adoption leadership, with minimal people management and full ownership of technical quality, delivery velocity, and long-term maintainability.
+
+## AI Enablement
+- Designed and implemented an MCP server for the Spark React library to enable AI-driven design-to-code workflows.
+- Integrated Figma-to-code translation using modular, EDL-compliant components.
+- Deployed MCP infrastructure on Google run for organization-wide usage.
+- Built AI assistant RAG interfaces similar to chatgpt interface inside products.
+- Defined Copilot instructions and slash commands for consistent AI usage.
+- Introduced AI-augmented code reviews and validation workflows.
+
+Result: Higher developer throughput, improved design consistency, and AI agents at work reducing dependency on human team members. Enhanced developer experience.
+
+## Core Responsibilities
+
+- Led frontend architecture for CRO, an enterprise AI product, from inception to large-scale deployment.
+- Designed and implemented a future-proof React stack aligned with Sabre’s internal ecosystem and compliance constraints.
+- Balanced in-house development and strategic vendor tooling to optimize delivery speed and platform stability.
+- Built proof-of-concepts and production-ready AI integrations for frontend products with MCP servers.
+- Drove organization-wide AI adoption for UI development, testing, and code review.
+- Provided technical leadership across cross-functional teams including frontend, backend, cloud, UX, automation, and program management.
+- Acted as a technical connector across teams by staying aligned with parallel product initiatives.
+
+## Platform Leadership
+
+- Conceptualized and built frontend platforms from a clean slate.
+- Evaluated and standardized core tooling for portfolio of frontend products:
+   - React, TanStack Query, Zustand
+   - Ag Grids, High charts
+   - Vitest, Playwright
+   - MCP Servers, RAG clients
+   - GitHub Copilot instructions / custom AI Agents
+- Established scalable folder structures, dependency governance, and coding standards.
+- Selected enterprise-grade charting and grid libraries under perpetual licenses to reduce time-to-market and operational risk.
+
+Result: Faster delivery cycles, predictable scalability, and reduced long-term maintenance overhead.
+
+## Product experience
+
 ### AI based Sass
 
 1. Revenue Optimizer
@@ -25,11 +63,15 @@ Role Overview:
 
 4. Automation and Collaboration: Implemented automated testing with Playwright, facilitated cross-functional collaborations, and provided strategic UX feedback to elevate user experience.
 
+5. Established scalable folder structures, dependency governance, and coding standards.
+
 Technological Stack:
 
 - Frontend Technologies: React 18, Zustand, Tanstack Query, AG Grid, Highcharts, Sabre Spark EDL
 
 - Backend Technologies: Google Cloud Platform (GCP), Spring Boot, MongoDB
+
+Result: Predictable scalability, faster delivery, and reduced maintenance overhead.
 
 Duration: April 2024 - Present
 
@@ -38,6 +80,12 @@ Duration: April 2024 - Present
 2.  Sabre Spark Enterprise Design Language
 
     By using Sabre Spark EDL, Sabre ensures a unified user experience across their products, enhancing user satisfaction and facilitating the adoption of new features and functionality. Spark EDL team consists of skilled designers and design technologists who specialize in developing vanilla JS components, React components, and design language CSS and themes. Their expertise and collaborative approach ensure that Sabre's products are designed with a consistent and intuitive user interface that meets the highest standards of accessibility, efficiency, and visual appeal.
+
+    Result: Unified UI standards and faster onboarding.
+
+    Led frontend enablement for an enterprise-wide rebranding initiative. Partnered with multiple portfolio teams to implement design and structural changes. Created reference GitHub pull requests as living documentation. Defined migration patterns for logos, assets, and branding guidelines. Provided hands-on support to ensure smooth adoption across products.
+
+    Result: Consistent brand rollout with minimal disruption to delivery timelines.
 
     <Image
       img={require("../../static/img/portfolio/spark-edl-screenshot.webp")}
@@ -121,7 +169,7 @@ Tech stack - Bootstrap, jQuery, responsive websites, sketch, mac, SASS, BEM CSS,
 
 [Cisco webex](https://www.webex.com/)
 
-### Education technology
+## Education technology
 
 10. Impartus Video Lectures
 
